LDEV-4154 updating labels

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 16 01:48:30 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Dec 20 23:14:44 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -530,6 +530,8 @@ sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 config.failed.attempts  =Number of failed logins before locking account
 config.lock.out.time  =Number of minutes to lock account for
 config.default.html.theme  =Default theme
+admin.user.changePassword  =Change password
 config.show.timezone.warning  =Show warning when user's LAMS timezone does not match their computer/device.
 
-#======= End labels: Exported 524 labels for en AU =====
+
+#======= End labels: Exported 526 labels for en AU =====
