LDEV-4154 updating labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 19 14:55:58 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 21 10:56:03 CST 2016 
  
 #=================== labels for LAMS Central =================# 
 
@@ -716,7 +716,7 @@ authoring.fla.cut.button  =Cut
 authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
 label.password.must.lcase  =at least 1 lower case letter
-label.timezone.warning  =The timezone set in your profile not match timezone on your computer. The times shown will be for the timezone set in your profile.
+label.timezone.warning  =The timezone set in your profile does not match timezone on your computer. The times shown will be for the timezone set in your profile.
 
 
 #======= End labels: Exported 711 labels for en AU =====
