LDEV-4164 assign new version to the building block (1.2.20). From now on it starts working with LAMS WF branch

--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -134,3 +134,9 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 * LDEV-3510: Remove previously added line that made LAMS Lessons always appear at top of content list
 * LDEV-3958: Add a button to admin page that can fix grade center columns
 * LDEV-4080: Blackboard sends _course_id instead of courseId string to LAMS on creating new lessons
+
+1.2.20 Release Fixes. Works with WF from now on
+====================
+* LDEV-4162: Add a parameter to LearningDesignSVG for lessonId
+* LDEV-4163: Integration API that returns true if the LD has outputs
+* LDEV-4164: Fix sorting in BB content area
