--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -140,3 +140,4 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 * LDEV-4162: Add a parameter to LearningDesignSVG for lessonId
 * LDEV-4163: Integration API that returns true if the LD has outputs
 * LDEV-4164: Fix sorting in BB content area
+* LDEV-4171: Remove obsolete svgFormat parameter that is no longer used in WF as long as it produces only SVGs (no PNGs)
