LDEV-4161: On star entry page, change wording from "Your rating is " to "You gave a rating of  " and do not display the average.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -61,6 +61,7 @@ label.redo  =Redo ratings
 label.rating.criterias  =Rating criteria
 label.add.criteria  =Add Criterion
 label.your.rating  =Your rating is {0}<br> Avg rating {1} out of {2} votes
+label.you.gave.rating  =You gave a rating of {0}
 label.rate.limits.reminder  =Rate a minimum of {0} and a maximum of {1} users.
 label.rate.all.users  =Rate All Users
 label.rate.limits.topic.reminder  =You have rated {0} users already.
