LDEV-4161: Further enhancement to Peer Review - the author can now differentiate what to show on the results, the results page now indicates how many possible reviews can be done and sorts the comments in alphabetical order.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -60,8 +60,10 @@ label.average.rating  =Average rating {0}/{1} votes
 label.redo  =Redo ratings
 label.rating.criterias  =Rating criteria
 label.add.criteria  =Add Criterion
-label.your.rating  =Your rating is {0}<br> Avg rating {1} out of {2} votes
+label.your.rating  =Your rating is {0}
 label.you.gave.rating  =You gave a rating of {0}
+label.avg.rating = Avg rating {0} out of {1} votes
+label.not.rated  =You have not rated this user
 label.rate.limits.reminder  =Rate a minimum of {0} and a maximum of {1} users.
 label.rate.all.users  =Rate All Users
 label.rate.limits.topic.reminder  =You have rated {0} users already.
@@ -84,7 +86,6 @@ label.user.name  =User name
 label.rating  =Rating
 label.comment  =Comment
 label.show.ratings.left.for.user  =After completion, show feedback left for student
-label.ratings.by.others  =Ratings by other users
 label.comment.minimum.number.words  =Minimum number of words in a comment{0}
 label.no.users  =There are no users available for rating. Press Refresh to check for new users.
 label.no.ratings.left  =No ratings left
@@ -156,3 +157,5 @@ label.total.group.mark=Total team mark
 label.individual.mark=Individual mark
 error.edit.not.remove=You may edit but you may not remove a saved comment.
 error.unable.save.comments=Unable to save comments
+label.show.ratings.left.by.user  =After completion, show feedback left by student
+label.ratings.by.others  =Ratings left for you
