--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -32,7 +32,6 @@ monitoring.label.number.learners  =Number of Learners
 monitoring.label.user.name  =Name
 label.monitoring.edit.activity.edit  =Edit
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
-export.title  =Export portfolio of Peer Review
 label.delete  =Delete
 label.edit  =Edit
 label.finished  =Next Activity
@@ -61,8 +60,12 @@ label.average.rating  =Average rating {0}/{1} votes
 label.redo  =Redo ratings
 label.rating.criterias  =Rating criteria
 label.add.criteria  =Add Criterion
-label.your.rating  =Your rating is {0}<br> Avg rating {1} out of {2} votes
-label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
+label.your.rating  =Your rating is {0}
+label.you.gave.rating  =You gave a rating of {0}
+label.avg.rating = Avg rating {0} out of {1} votes
+label.not.rated  =You have not rated this user
+label.rate.limits.reminder  =Rate a minimum of {0} and a maximum of {1} users.
+label.rate.all.users  =Rate All Users
 label.rate.limits.topic.reminder  =You have rated {0} users already.
 label.rate.limits.reminder.min = You must rate at least {0} users.
 label.rate.limits.reminder.max = You can only rate up to {0} users.
@@ -83,7 +86,6 @@ label.user.name  =User name
 label.rating  =Rating
 label.comment  =Comment
 label.show.ratings.left.for.user  =After completion, show feedback left for student
-label.ratings.by.others  =Ratings by other users
 label.comment.minimum.number.words  =Minimum number of words in a comment{0}
 label.no.users  =There are no users available for rating. Press Refresh to check for new users.
 label.no.ratings.left  =No ratings left
@@ -92,11 +94,12 @@ label.refresh=Refresh
 warning.comment.blank=Comment text is missing.
 creating.users.message  =Please wait while the learners\' details are set up ready for you to review their responses.
 error.max.ratings.per.user=Unable to save the review - the maximum number of ratings may have been reached. The page will now be refreshed.
-export.tool.export.not.supported=This tool does not support export portfolio.
-label.rating.rank=Rank
+label.review.options=Review Options
+label.activity.completion=End of Activity
 label.rating.style.star=Star Rating
 label.rating.style.ranking=Ranking
 label.rating.style.hedging=Hedging
+label.rating.style.comment=Comment
 label.rating.all=ALL
 label.rating.author.justify=Ask for hedging justification?
 label.rating.learner.hedge.assign.marks=Assign marks to answers. Max possible mark: 10
@@ -108,7 +111,7 @@ label.justify.hedging.marks=Justify your mark allocation.
 label.assign.marks=Assign up to {0} marks altogether, sharing marks across learners. Current total: {1}.
 error.assign.marks=The marks must add up to {0}. 
 label.assign.ranks=Fill the boxes with the top {0} entries, by dragging the learners' name onto the box.
-error.assign.ranks=You must complete all {0} boxes. 
+error.assign.ranks=The marks must add up to {0}. 
 label.assign.rankAll=Order the learners in ranking order, from first to last, by dragging learners from the right hand column to the left column. Dragging a name on top of another will put the new name first. All learners must be ranked. 
 error.assign.rankAll=All learners must be ranked. 
 label.ranked=Ranked
@@ -137,7 +140,7 @@ label.close=Close
 event.sent.results.subject=LAMS: {0} results were released 
 event.sent.results.body=<p>{0}<br/><br/>Your results are:</p><div>{1}</div><p>This message was send automatically, please do not reply to it.</p>
 event.sent.results.criteria.comment=<p><strong>{0}</strong>:<ul>{1}</ul></p>
-event.sent.results.criteria.star=<p><strong>{0}</strong> (Star): {1}<ul>{2}</ul></p>
+event.sent.results.criteria.star=<p><strong>{0}</strong> (Star): {1}</p><UL>{2}</UL>
 event.sent.results.criteria.hedge=<p><strong>{0}</strong> (Mark Hedging): {1} out of {2}</p>
 event.sent.results.criteria.rank=<p><strong>{0}</strong> (Rank): {1} out of {2}</p>
 event.sent.results.criteria.rankAll=<p><strong>{0}</strong> (Rank All): {1}</p>
@@ -145,3 +148,15 @@ event.sent.results.no.results=No results
 msg.results.sent={0} Email(s) Sent
 button.email.results=Email Results
 label.notify.user.of.results=Notify Users of Results
+label.number.of.team.members=No of team members
+label.average=Average
+label.for.user=For {0} 
+label.learner=Student
+label.spa.factor=SPA factor
+label.total.group.mark=Total team mark
+label.individual.mark=Individual mark
+error.edit.not.remove=You may edit but you may not remove a saved comment.
+error.unable.save.comments=Unable to save comments
+label.show.ratings.left.by.user  =After completion, show feedback left by student
+label.ratings.by.others  =Ratings left for you
+label.no.ratings.out.of.possible.ratings={0} rating(s) out of {1} possible ratings.
