LDEV-3115: Prevent an author from trying to save a LD in Run Sequences folders.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -544,6 +544,7 @@ authoring.fla.rename.title.prompt  =Please enter the new name for
 authoring.fla.save.sequence.title.prompt  =Please enter a title for the sequence
 authoring.fla.import.part.choose.prompt  =Click on activities to choose them for import
 authoring.fla.folder.not.selected.error  =Please choose a folder
+authoring.fla.folder.can.not.save.error =You can not save in this folder
 authoring.fla.title.validation.error  =The title can not contain any of these characters < > ^ * @ % $
 authoring.fla.folder.exists.error  =A folder with this name already exists.
 authoring.fla.sequence.exists.error  =A sequence with this name already exists.
