--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -85,7 +85,7 @@ label.sort.by.user.name  =Sort by user name
 label.user.name  =User name
 label.rating  =Rating
 label.comment  =Comment
-label.show.ratings.left.for.user  =After completion, show feedback left for student
+label.show.ratings.left.for.user  =After completion, show feedback left for the current student
 label.comment.minimum.number.words  =Minimum number of words in a comment{0}
 label.no.users  =There are no users available for rating. Press Refresh to check for new users.
 label.no.ratings.left  =No ratings left
@@ -122,7 +122,7 @@ label.next=Next
 label.previous=Previous
 label.step=Step {0} of {1}
 label.mark=Mark
-label.rank=Rank
+label.rating.rank=Rank
 label.self.review=Allow Self Review
 label.monitoring.num.of.comments={0} Comments
 label.monitoring.instructions.rank.all.learners=Learners needed to rank ALL the learners.
@@ -157,5 +157,6 @@ label.total.group.mark=Total team mark
 label.individual.mark=Individual mark
 error.edit.not.remove=You may edit but you may not remove a saved comment.
 error.unable.save.comments=Unable to save comments
-label.show.ratings.left.by.user  =After completion, show feedback left by student
+label.show.ratings.left.by.user  =After completion, show feedback left for other students
 label.ratings.by.others  =Ratings left for you
+label.rating.rank=Rank
