LDEV-4196 Create document collaboration tool

--- a/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
@@ -71,5 +71,6 @@ label.monitoring.team.leader  =team leader
 label.waiting.for.leader  =Please, wait while somebody will become a group leader.
 label.users.from.group  =Other learners participating in current group:
 label.refresh  =Refresh
+label.shared.pad.id  =Shared pad id that allows using the same pad between several doKumaran activities
 
 #======= End labels: Exported 164 labels for en AU =====
