LDEV-4196 Added new options to allow multiple leaders

--- a/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
@@ -72,5 +72,6 @@ label.waiting.for.leader  =Please, wait while somebody will become a group leade
 label.users.from.group  =Other learners participating in current group:
 label.refresh  =Refresh
 label.shared.pad.id  =Shared pad id that allows using the same pad between several doKumaran activities
+label.allow.multiple.leaders  =All leaders participate together (applicable only for non-grouped doKumaran activities)
 
 #======= End labels: Exported 164 labels for en AU =====
