LDEV-4196 * Сlose Etherpad session when user finishes activity * Use top level domain for storing cookies * Get rid of the ability of changing user names when editing pads * Remove several extra buttons from Etherpad toolbar. But show timeslider and export html buttons in monitor instead as a separate buttons * Fixed a few previous bugs

--- a/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
@@ -57,8 +57,8 @@ label.activity.completion  =End of activity
 pageTitle.admin  =Dokumaran settings
 label.select.leader  =Leader selection
 label.use.select.leader.tool.output  =Use leaders from Select Leader tool
-label.show.chat  =Show the line numbers
-label.show.line.numbers  =Show the chat button
+label.show.chat  =Show the chat button
+label.show.line.numbers  =Show the line numbers
 admin.formError  =Missing values, please make sure all required fields are entered.
 admin.etherpad.url  =Etherpad server URL
 admin.apiKey  =API Key
@@ -73,5 +73,8 @@ label.users.from.group  =Other learners participating in current group:
 label.refresh  =Refresh
 label.shared.pad.id  =Shared pad id that allows using the same pad between several doKumaran activities
 label.allow.multiple.leaders  =All leaders participate together (applicable only for non-grouped doKumaran activities)
+label.timeslider  =Timeslider
+label.export.pad.html  =Export current pad as HTML
+label.manage.faulty.pads  =Pads with issues
 
 #======= End labels: Exported 164 labels for en AU =====
