LDEV-4200: Changing the show/hide date link to be a button like link on the right hand side of the screen.

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -104,7 +104,7 @@ audit.marks.released.off  =Marks have been hidden for lessonId {0}.
 gradebook.export.login  =Username
 button.help  =Help
 button.help.tooltip  =Open help
-gradebook.monitor.show  =Show
-gradebook.monitor.learner.lesson.dates  =Learner Lesson Dates
+gradebook.monitor.show.dates  =Show Dates
+gradebook.monitor.hide.dates  =Hide Dates
 
 #======= End labels: Exported 98 labels for en AU =====
