LDEV-4196 * Adding buttons in monitoring that will recover faulty sessions. * Improved timelimit feature so it opens in the same iframe * Show line numbers option. Etherpad ignores this URL parameter when it's stored in cookie so turned off checking this cookie.

--- a/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_doku/conf/language/lams/ApplicationResources_en_AU.properties
@@ -74,7 +74,10 @@ label.refresh  =Refresh
 label.shared.pad.id  =Shared pad id that allows using the same pad between several doKumaran activities
 label.allow.multiple.leaders  =All leaders participate together (applicable only for non-grouped doKumaran activities)
 label.timeslider  =Timeslider
-label.export.pad.html  =Export current pad as HTML
-label.manage.faulty.pads  =Pads with issues
+label.export.pad.html  =Export as HTML
+label.recreate.faulty.pad  =Recreate pad
+label.cant.display.faulty.pad  =This session has had problems with initialization. You can fix this by pressing the Recreate pad button.
+label.pad.started.fixing  =Please wait. Pad is getting recreated now.
+label.pad.fixed  =Pad has been successfully created. Please refresh the page to see its content. 
 
 #======= End labels: Exported 164 labels for en AU =====
