LDEV-4205 Fixed incorrect initialization of WikiOutputFactory

--- a/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
@@ -118,8 +118,8 @@ monitor.summary.td.addNotebook  =Add a notebook at end of Wiki
 monitor.summary.td.notebookInstructions  =Notebook instructions
 monitor.nosessions  =There are no sessions running yet for this Wiki.
 monitor.notebooks  =Notebook reflections
-output.learner.number.of.edits  =Number of page edits
-output.learner.number.of.add  =Number of pages added
+output.desc.number.of.edits  =Number of page edits
+output.desc.number.of.add  =Number of pages added
 notify.pageEdited.subject  =LAMS Wiki page has been edited by {0}.
 notify.pageAdded.subject  =LAMS Wiki page has been added by {0}.
 notify.pageRemoved.subject  =LAMS Wiki page has been removed by {0}.
