LDEV-4207 Added ability to select and use boolean type of tool outputs

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -597,6 +597,7 @@ authoring.fla.gate.state.closed  =closed
 authoring.fla.branch.mapping.default.branch.suffix  =(default)
 authoring.fla.complex.output.suffix  =(user defined)
 authoring.fla.range.output.suffix  =(range)
+authoring.fla.boolean.output.suffix  =(boolean: 1 or 0)
 authoring.fla.range.condition.description  =Range [0] to [1]
 authoring.fla.exact.condition.description  =Exact value of
 authoring.fla.less.condition.description  =Less than or eq
