--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Dec 20 23:14:44 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jan 31 17:42:23 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -532,6 +532,7 @@ config.lock.out.time  =Number of minutes to lock account for
 config.default.html.theme  =Default theme
 admin.user.changePassword  =Change password
 config.show.timezone.warning  =Show warning when user's LAMS timezone does not match their computer/device.
+label.password.must.lcase  =at least 1 lower case letter
 
 
-#======= End labels: Exported 526 labels for en AU =====
+#======= End labels: Exported 527 labels for en AU =====
