LDEV-4200 adding labels for English, Greek and Spanish

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 02:40:33 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:21:24 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -104,7 +104,8 @@ audit.marks.released.off  =Marks have been hidden for lessonId {0}.
 gradebook.export.login  =Username
 button.help  =Help
 button.help.tooltip  =Open help
-gradebook.monitor.show.dates  =Show Dates
-gradebook.monitor.hide.dates  =Hide Dates
+gradebook.monitor.show.dates  =Show dates
+gradebook.monitor.hide.dates  =Hide dates
 
-#======= End labels: Exported 98 labels for en AU =====
+
+#======= End labels: Exported 100 labels for en AU =====
