--- a/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:21:27 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -97,6 +97,15 @@ label.max.mark  =\u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf\u03c2 \u0392\u03b1\u
 label.actuals  =\u03a0\u03c1\u03b1\u03b3\u03bc\u03b1\u03c4\u03bf\u03c0\u03bf\u03b9\u03b7\u03b8\u03ad\u03bd\u03c4\u03b1
 label.max  =\u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf
 label.overall.totals  =\u0393\u03b5\u03bd\u03b9\u03ba\u03ac \u03c3\u03cd\u03bd\u03bf\u03bb\u03b1
+audit.lesson.change.mark  =\u0391\u03bb\u03bb\u03ac\u03c7\u03b8\u03b7\u03ba\u03b5 \u03bf \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c3\u03c4\u03bf\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf {0}. \u039c\u03ac\u03b8\u03b7\u03bc\u03b1: {1}. \u03a0\u03b1\u03bb\u03b9\u03cc\u03c2 \u0392\u03b1\u03b8\u03bc\u03cc\u03c2: {2}, \u039d\u03ad\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2: {3}
+audit.activity.change.mark  =\u0391\u03bb\u03bb\u03ac\u03c7\u03b8\u03b7\u03ba\u03b5 \u03bf \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c3\u03c4\u03bf\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf {0}. \u039c\u03ac\u03b8\u03b7\u03bc\u03b1: {1}. \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 {2}. \u03a0\u03b1\u03bb\u03b9\u03cc\u03c2 \u0392\u03b1\u03b8\u03bc\u03cc\u03c2: {3}, \u039d\u03ad\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2: {3}
+audit.marks.released.on  =\u039f\u03b9 \u03b2\u03b1\u03b8\u03bc\u03bf\u03af \u03b3\u03b9\u03b1 \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 {0} \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03bd\u03b1\u03ba\u03bf\u03b9\u03bd\u03c9\u03b8\u03b5\u03af.
+audit.marks.released.off  =\u039f\u03b9 \u03b2\u03b1\u03b8\u03bc\u03bf\u03af \u03b3\u03b9\u03b1 \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 {0} \u03ad\u03c7\u03bf\u03c5\u03bd \u03ba\u03c1\u03c5\u03c6\u03c4\u03b5\u03af.
+gradebook.export.login  =\u038c\u03bd\u03bf\u03bc\u03b1 \u03a7\u03c1\u03ae\u03c3\u03c4\u03b7
+button.help  =\u0392\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1
+button.help.tooltip  =\u0391\u03bd\u03bf\u03af\u03be\u03c4\u03b5 \u03c4\u03b7 \u03b2\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1
+gradebook.monitor.show.dates  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03b9\u03ce\u03bd
+gradebook.monitor.hide.dates  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03b9\u03ce\u03bd
 
 
-#======= End labels: Exported 91 labels for el GR =====
+#======= End labels: Exported 100 labels for el GR =====
