--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 02:41:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 05 23:23:13 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -104,6 +104,8 @@ audit.marks.released.off  =Los resultados han sido ocultos para lessonId {0}.
 gradebook.export.login  =Usuario
 button.help  =Ayuda
 button.help.tooltip  =Abrir ayuda
+gradebook.monitor.show.dates  =Mostrar fechas
+gradebook.monitor.hide.dates  =Esconder fechas
 
 
-#======= End labels: Exported 98 labels for es ES =====
+#======= End labels: Exported 100 labels for es ES =====
