LDEV-4216: Tour has been internationalized and a few tweaks to the layout done to look better on an iPad.

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -718,6 +718,34 @@ authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
 label.password.must.lcase  =at least 1 lower case letter
 label.timezone.warning  =The timezone set in your profile does not match timezone on your computer. The times shown will be for the timezone set in your profile.
-
+lessons=Lessons
+label.tour=Tour
+tour.intro.title=LAMS Tour
+tour.intro.content=This short tour will show you the features of the main LAMS screen. You can stop the tour at any time by clicking End Tour, and restart it again by clicking on the Tour button.
+tour.course.reveal.content=Click here to reveal or hide your courses.
+tour.courses.content=Click on a course to make it the current course.
+tour.favorites.content=Your favorite courses will appear at the top of the list.
+tour.lessons.content=Lessons will appear here for the current course.
+tour.notification.content=Review the notifications that you have received about your lessons.
+tour.authoring.content=Create or modify the learning designs used for lessons.
+tour.user.profile.content=Update your personal settings.
+tour.course.name.title=Course Name
+tour.course.name.content=Current course name. Click on the star to add this course to your favourites in the course list.
+tour.add.lesson.content=Create a new lesson for this course using this button, or a lesson to a course subgroup using the Add Lesson button next to the subgroup name.
+tour.add.single.activity.lesson.content=Use the down arrow to select an activity and then create a lesson with just this single activity.
+tour.course.gradebook.content=View your marks for this course.
+tour.more.actions.content=General options for managing this course such as notifications, subgroups, gradebook. The contents of this menu will vary depending on your responsibilities.
+tour.lesson.monitoring.title=Lesson Monitoring
+tour.lesson.monitoring.content=The Monitoring screen shows you where the learners are in the lesson their contributions.
+tour.lesson.notifications.title=Lesson Notifications
+tour.lesson.notifications.content=Send email notifications to learners.
+tour.lesson.gradebook.title=Lesson Gradebook
+tour.lesson.gradebook.content=Review learners\' marks and the length of time taken in the lesson.
+tour.lesson.conditions.title=Lesson Conditions
+tour.lesson.conditions.content=Set up conditions for starting or ending the lesson.
+tour.lesson.remove.title=Remove Lesson
+tour.lesson.remove.content=Remove the lesson completely. This is permanent - it cannot be undone.
+tour.end.title=End Of Tour
+tour.end.content=Thank you for taking the tour. To restart the tour, click the Tour button again.
 
 #======= End labels: Exported 711 labels for en AU =====
