LDEV-4216 Adding tour labels for index page

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 21 10:56:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Feb 09 21:20:19 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -26,7 +26,7 @@ button.login  =Login
 label.user.guide  =[HELP]
 msg.loading  =Loading...
 msg.LAMS.version  =Version
-msg.LAMS.copyright.short  =2002-2016 LAMS Foundation.
+msg.LAMS.copyright.short  =2002-2017 LAMS Foundation.
 button.save  =Save
 button.cancel  =Cancel
 no.such.learningdesign.exist  =No Learning Design with learning_design_id of:{0} exists.
@@ -107,7 +107,7 @@ msg.export.failed  =Learning design export failed
 msg.reason.is  =The reason is
 button.close  =Close
 button.import  =Import
-msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002-2016 LAMS Foundation.
+msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002-2017 LAMS Foundation.
 msg.LAMS.copyright.statement.2  =LAMS is a trademark of LAMS Foundation (http://lamsfoundation.org).
 msg.LAMS.copyright.statement.3  =This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License version 2 as published by the Free Software Foundation.
 title.export  =Export tool content
@@ -169,7 +169,6 @@ msg.status.not.stated  =This lesson has not been started so you cannot access it
 msg.status.disabled  =This lesson is disabled so you cannot access it.
 msg.status.finished  =This lesson has been finished or archived.
 msg.status.removed  =This lesson has been removed.
-index.community  =Community
 msg.browser.compat  =Your browser does not support features required by LAMS. Please upgrade your browser.
 label.disabled  =Disabled
 label.archived  =Archived
@@ -214,12 +213,6 @@ index.searchlesson  =Learner Search
 index.searchlesson.tooltip  =Search learners across lessons
 lessonsearch.noresults  =No Lessons found
 error.multiple.emails  =There are multiple users in LAMS with the given email. Email could not be sent. Please try again using your username, or contact your system administrator.
-label.lamscommunity.message  =Login to lamscommunity.org
-label.lamscommunity.login  =lamscommunity.org login:
-label.lamscommunity.password  =lamscommunity.org password:
-index.lamscommunity  =LAMS Community
-label.lamscommunity.changeuser  =Stop using lamscommunity.org user {0}
-lamscommunity.login.failed  =Login to lamscommunity.org failed, please try again.
 public.folder  =Public Folder
 videorecorder.instructions.fck  =Click the record button to start and stop recording. Once a recording is completed, you can review it by clicking the play button. When ready to add the video, click the tick button. Having problems with recording? It might be that your network blocks the video recording ports. Contact your system administrator.
 index.coursegradebook  =Course Gradebook
@@ -260,10 +253,6 @@ label.timezone.27  =(GMT +9:30) Adelaide, Darwin
 label.timezone.28  =(GMT +10:00) Eastern Australia, Guam, Vladivostok
 label.timezone.29  =(GMT +11:00) Magadan, Solomon Islands, New Caledonia
 label.timezone.30  =(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
-title.import.lamscommunity  =Import from lamscommunity.org
-label.lamscommunity.notRegistered.1  =Your server is not registered with the LAMS Community so you can not seamlessly import sequences directly into your LAMS server from the community. Ask your system administrator to enable this feature.
-label.lamscommunity.notRegistered.2  =However, you can download and import the sequences manually from the LAMS Community website:
-label.lamscommunity.info  =The LAMS Community is a global online community for all teachers, administrators and developers that use LAMS. Within the various sub-communities, you can access the latest news about LAMS, many different discussion forums, and a repository of shared LAMS sequences.
 email.to  =To
 email.subject  =Subject
 email.send  =Send
@@ -597,7 +586,6 @@ authoring.fla.gate.state.closed  =closed
 authoring.fla.branch.mapping.default.branch.suffix  =(default)
 authoring.fla.complex.output.suffix  =(user defined)
 authoring.fla.range.output.suffix  =(range)
-authoring.fla.boolean.output.suffix  =(boolean: 1 or 0)
 authoring.fla.range.condition.description  =Range [0] to [1]
 authoring.fla.exact.condition.description  =Exact value of
 authoring.fla.less.condition.description  =Less than or eq
@@ -718,34 +706,37 @@ authoring.fla.modify.error  =You cannot modify this resource
 authoring.fla.folder.move.to.child.error  =Cannot move a folder into its child
 label.password.must.lcase  =at least 1 lower case letter
 label.timezone.warning  =The timezone set in your profile does not match timezone on your computer. The times shown will be for the timezone set in your profile.
-lessons=Lessons
-label.tour=Tour
-tour.intro.title=LAMS Tour
-tour.intro.content=This short tour will show you the features of the main LAMS screen. You can stop the tour at any time by clicking End Tour, and restart it again by clicking on the Tour button.
-tour.course.reveal.content=Click here to reveal or hide your courses.
-tour.courses.content=Click on a course to make it the current course.
-tour.favorites.content=Your favorite courses will appear at the top of the list.
-tour.lessons.content=Lessons will appear here for the current course.
-tour.notification.content=Review the notifications that you have received about your lessons.
-tour.authoring.content=Create or modify the learning designs used for lessons.
-tour.user.profile.content=Update your personal settings.
-tour.course.name.title=Course Name
-tour.course.name.content=Current course name. Click on the star to add this course to your favourites in the course list.
-tour.add.lesson.content=Create a new lesson for this course using this button, or a lesson to a course subgroup using the Add Lesson button next to the subgroup name.
-tour.add.single.activity.lesson.content=Use the down arrow to select an activity and then create a lesson with just this single activity.
-tour.course.gradebook.content=View your marks for this course.
-tour.more.actions.content=General options for managing this course such as notifications, subgroups, gradebook. The contents of this menu will vary depending on your responsibilities.
-tour.lesson.monitoring.title=Lesson Monitoring
-tour.lesson.monitoring.content=The Monitoring screen shows you where the learners are in the lesson their contributions.
-tour.lesson.notifications.title=Lesson Notifications
-tour.lesson.notifications.content=Send email notifications to learners.
-tour.lesson.gradebook.title=Lesson Gradebook
-tour.lesson.gradebook.content=Review learners\' marks and the length of time taken in the lesson.
-tour.lesson.conditions.title=Lesson Conditions
-tour.lesson.conditions.content=Set up conditions for starting or ending the lesson.
-tour.lesson.remove.title=Remove Lesson
-tour.lesson.remove.content=Remove the lesson completely. This is permanent - it cannot be undone.
-tour.end.title=End Of Tour
-tour.end.content=Thank you for taking the tour. To restart the tour, click the Tour button again.
+authoring.fla.folder.can.not.save.error  =You cannot save in this folder
+authoring.fla.boolean.output.suffix  =(boolean: 1 or 0)
+lessons  =Lessons
+label.tour  =Tour
+tour.intro.title  =LAMS Tour
+tour.intro.content  =This short tour will show you the features of the main LAMS screen. You can stop the tour at any time by clicking End Tour, and restart it again by clicking on the Tour button.
+tour.course.reveal.content  =Click here to reveal or hide your courses.
+tour.courses.content  =Click on a course to make it the current course.
+tour.favorites.content  =Your favourite courses will appear at the top of the list.
+tour.lessons.content  =Lessons will appear here for the current course.
+tour.notification.content  =Review the notifications that you have received about your lessons.
+tour.authoring.content  =Create or modify the learning designs used for lessons.
+tour.user.profile.content  =Update your personal settings.
+tour.course.name.title  =Course Name
+tour.course.name.content  =Current course name. Click on the star to add this course to your favourites in the course list.
+tour.add.lesson.content  =Create a new lesson for this course using this button, or a lesson to a course subgroup using the Add Lesson button next to the subgroup name.
+tour.add.single.activity.lesson.content  =Use the down arrow to select an activity and then create a lesson with just this single activity.
+tour.course.gradebook.content  =View your marks for this course.
+tour.more.actions.content  =General options for managing this course such as notifications, subgroups, gradebook. The contents of this menu will vary depending on your responsibilities.
+tour.lesson.monitoring.title  =Lesson Monitoring
+tour.lesson.monitoring.content  =The Monitoring screen shows you where the learners are in the lesson their contributions.
+tour.lesson.notifications.title  =Lesson Notifications
+tour.lesson.notifications.content  =Send email notifications to learners.
+tour.lesson.gradebook.title  =Lesson Gradebook
+tour.lesson.gradebook.content  =Review learners\' marks and the length of time taken in the lesson.
+tour.lesson.conditions.title  =Lesson Conditions
+tour.lesson.conditions.content  =Set up conditions for starting or ending the lesson.
+tour.lesson.remove.title  =Remove Lesson
+tour.lesson.remove.content  =Remove the lesson completely. This is permanent - it cannot be undone.
+tour.end.title  =End Of Tour
+tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again.
 
-#======= End labels: Exported 711 labels for en AU =====
+
+#======= End labels: Exported 731 labels for en AU =====
