LDEV-4232 adding missing label

--- a/lams_tool_task/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:31:59 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Feb 17 00:15:54 CST 2017 
  
 #=================== labels for Task List =================# 
 
@@ -167,6 +167,7 @@ label.download  =Download
 label.confirm  =Confirm
 label.task.options  =Task options
 label.activity.completion  =End of activity
+errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes.
 
 
-#======= End labels: Exported 161 labels for en AU =====
+#======= End labels: Exported 162 labels for en AU =====
