LDEV-4233 added confirmation dialog asking whether teacher wants to proceed with hiding user as it will lead to removal of this user's ratings and comments

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -166,4 +166,5 @@ label.manage.users  =Manage users
 label.manage.users.description  =Uncheck all learners that should not be rated by others
 label.removed.user.warning  =The teacher has limited your ability to rate and be rated in this activity.
 label.user.hidden  =Remove user from rating
+label.hide.user.confirmation  =Are you sure you want to stop rating this user? It will lead to removal of all ratings and comments left by him/her.
 
