LDEV-4236: Error message when file was too big was not displaying. Had wrong key for message in I18N file. LDEV-4237: Adding help text to indicate max file size.

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -38,7 +38,8 @@ label.learner.marks  =Marks
 label.learner.dateMarksReleased  =Date marks released
 label.learner.notAvailable  =Not available
 label.learner.noUpload  =No files have been uploaded yet.
-label.learner.uploadMessage  =Only one file can be uploaded at a time - Maximum file size is 1.0 MB
+label.learner.uploadMessage  =Uploaded file must not be executable and not exceed size of {0}
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 learner.finish.without.upload  =No files have been uploaded yet. Files can not be uploaded once you choose OK.
 label.monitoring.heading  =Monitoring
 label.monitoring.heading.userlist  =Summary
