LDEV-4236: adding label

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:15:23 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 19 23:31:28 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -155,6 +155,7 @@ audit.file.delete  =Instructor {0} deleted file {1} uploaded by learner {2}.
 audit.file.restore  =Instructor {0} restored file {1} uploaded by learner {2}.
 label.search  =Search...
 errors.required  ={0} is required.
+errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 
 
-#======= End labels: Exported 149 labels for en AU =====
+#======= End labels: Exported 150 labels for en AU =====
