--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:15:22 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 19 23:31:24 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -155,6 +155,7 @@ audit.file.delete  =Instructor {0} borr\u00f3 el archivo {1} cargado por alumno 
 audit.file.restore  =Instructor {0} recuper\u00f3 el archivo {1} cargado por alumno {2}
 label.search  =Buscar..
 errors.required  ={0} es obligatorio
+errors.maxfilesize  =El archivo subido excede el m\u00e1ximo permitido: {0}
 
 
-#======= End labels: Exported 149 labels for es ES =====
+#======= End labels: Exported 150 labels for es ES =====
