LDEV-4243 File size restrictions for CKEditor uploads

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -738,5 +738,7 @@ tour.lesson.remove.content  =Remove the lesson completely. This is permanent - i
 tour.end.title  =End Of Tour
 tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again.
 
+errors.maxfilesize =The uploaded file has exceeded the maximum file size limit of {0} bytes. 
+
 
 #======= End labels: Exported 731 labels for en AU =====
