--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -201,5 +201,6 @@ label.waiting.for.leader.launch.time.limit  =Leader has not started the activity
 label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
 label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 
+label.authoring.advanced.shuffle.items  =Shuffle items
 
 #======= End labels: Exported 194 labels for en AU =====
