--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 12 18:26:01 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Feb 23 16:53:05 CST 2017 
  
 #=================== labels for Scratchie =================# 
 
@@ -200,6 +200,7 @@ label.general.burning.question  =General burning question
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he commences it.
 label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
 label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
+label.authoring.advanced.shuffle.items  =Shuffle questions
 
 
-#======= End labels: Exported 194 labels for en AU =====
+#======= End labels: Exported 195 labels for en AU =====
