LDEV-3962 * readjusted Gradebook buttons' CSS and click handlers * fixed overlay CSS so it starts blocking entire area

--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -57,8 +57,7 @@ error.releasemarks.fail  =Mark release failed, please contact your system admini
 error.markhigher  =Mark must be lower than maximum mark.
 error.cellsave  =Problem saving cell content, please contact your system administrator.
 label.error  =Error
-gradebook.export.excel.1  =Export
-gradebook.export.excel.2  =grades
+gradebook.export.excel  =Export grades
 gradebook.export.activity  =Activity
 gradebook.export.activities  =Activities
 gradebook.export.outputs  =Outputs
@@ -86,8 +85,7 @@ gradebook.coursemonitor.wait  =Please wait...
 gradebook.exportcourse.current.activity  =Current activity: {0}
 gradebook.gridtitle.lesson.view  =Lesson View
 gradebook.gridtitle.learner.view  =Grades by  learner
-label.select  =Select
-label.lessons.to.export  =lessons to export.
+label.select.lessons.to.export  =Select lessons to export
 label.button.export  =Export
 label.lessons  =Lessons
 label.group  =Group
